# google-test-exmaple

./: .gitignore  CMakeLists.txt  Wrapper.cpp  Wrapper.h  main.cpp
test/: CMakeLists.txt  CreationTest.cpp  GettingTest.cpp
